include/dss_capi.h

    /*! 
    Name of an XfrmCode that supplies electrical parameters for this Transformer.
    */
    DSS_CAPI_DLL const char* Transformers_Get_XfmrCode(void);
    /*! 
    Percent reactance between windings 1 and 2, on winding 1 kVA base. Use for 2-winding or 3-winding transformers.
    */
    DSS_CAPI_DLL double Transformers_Get_Xhl(void);
    /*! 
    Percent reactance between windings 1 and 3, on winding 1 kVA base.  Use for 3-winding transformers only.
    */
    DSS_CAPI_DLL double Transformers_Get_Xht(void);
    /*! 
    Percent reactance between windings 2 and 3, on winding 1 kVA base. Use for 3-winding transformers only.
    */
    DSS_CAPI_DLL double Transformers_Get_Xlt(void);
    /*! 
    Active Winding neutral reactance [ohms] for wye connections.
    */
    DSS_CAPI_DLL double Transformers_Get_Xneut(void);
    /*! 
    Active Winding delta or wye connection?
    */
    DSS_CAPI_DLL void Transformers_Set_IsDelta(uint16_t Value);
    /*! 
    Active Winding kV rating.  Phase-phase for 2 or 3 phases, actual winding kV for 1 phase transformer.
    */
    DSS_CAPI_DLL void Transformers_Set_kV(double Value);
    /*! 
    Active Winding kVA rating. On winding 1, this also determines normal and emergency current ratings for all windings.
    */
    DSS_CAPI_DLL void Transformers_Set_kVA(double Value);
    /*! 
    Active Winding maximum tap in per-unit.
    */
    DSS_CAPI_DLL void Transformers_Set_MaxTap(double Value);
    /*! 
    Active Winding minimum tap in per-unit.
    */
    DSS_CAPI_DLL void Transformers_Set_MinTap(double Value);
    /*! 
    Sets a Transformer active by Name.
    */
    DSS_CAPI_DLL void Transformers_Set_Name(const char* Value);
    /*! 
    Active Winding number of tap steps between MinTap and MaxTap.
    */
    DSS_CAPI_DLL void Transformers_Set_NumTaps(int32_t Value);
    /*! 
    Number of windings on this transformer. Allocates memory; set or change this property first.
    */
    DSS_CAPI_DLL void Transformers_Set_NumWindings(int32_t Value);
    /*! 
    Active Winding resistance in %
    */
    DSS_CAPI_DLL void Transformers_Set_R(double Value);
    /*! 
    Active Winding neutral resistance [ohms] for wye connections. Set less than zero for ungrounded wye.
    */
    DSS_CAPI_DLL void Transformers_Set_Rneut(double Value);
    /*! 
    Active Winding tap in per-unit.
    */
    DSS_CAPI_DLL void Transformers_Set_Tap(double Value);
    /*! 
    Active Winding Number from 1..NumWindings. Update this before reading or setting a sequence of winding properties (R, Tap, kV, kVA, etc.)
    */
    DSS_CAPI_DLL void Transformers_Set_Wdg(int32_t Value);
    /*! 
    Name of an XfrmCode that supplies electrical parameters for this Transformer.
    */
    DSS_CAPI_DLL void Transformers_Set_XfmrCode(const char* Value);
    /*! 
    Percent reactance between windings 1 and 2, on winding 1 kVA base. Use for 2-winding or 3-winding transformers.
    */
    DSS_CAPI_DLL void Transformers_Set_Xhl(double Value);
    /*! 
    Percent reactance between windings 1 and 3, on winding 1 kVA base.  Use for 3-winding transformers only.
    */
    DSS_CAPI_DLL void Transformers_Set_Xht(double Value);
    /*! 
    Percent reactance between windings 2 and 3, on winding 1 kVA base. Use for 3-winding transformers only.
    */
    DSS_CAPI_DLL void Transformers_Set_Xlt(double Value);
    /*! 
    Active Winding neutral reactance [ohms] for wye connections.
    */
    DSS_CAPI_DLL void Transformers_Set_Xneut(double Value);
    DSS_CAPI_DLL int32_t Transformers_Get_Count(void);