src/v8/CAPI_Transformers.pas


function Transformers_Get_XfmrCode():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Transformers_Get_XfmrCode_AnsiString());
end;
//------------------------------------------------------------------------------
function Transformers_Get_Xhl():Double;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0.0;
  elem := ActiveTransformer;
  if elem <> nil then Result := elem.XhlVal;
end;
//------------------------------------------------------------------------------
function Transformers_Get_Xht():Double;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0.0;
  elem := ActiveTransformer;
  if elem <> nil then Result := elem.XhtVal;
end;
//------------------------------------------------------------------------------
function Transformers_Get_Xlt():Double;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0.0;
  elem := ActiveTransformer;
  if elem <> nil then Result := elem.XltVal;
end;
//------------------------------------------------------------------------------
function Transformers_Get_Xneut():Double;cdecl;
var
  elem: TTransfObj;
begin
  Result := 0.0;
  elem := ActiveTransformer;
  if elem <> nil then
    Result := elem.WdgXneutral[elem.ActiveWinding];
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_IsDelta(Value: WordBool);cdecl;
begin
  if Value = TRUE then
    Set_Parameter ('Conn', 'Delta')
  else
    Set_Parameter ('Conn', 'Wye')
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_kV(Value: Double);cdecl;
begin
  Set_Parameter ('kv', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_kVA(Value: Double);cdecl;
begin
  Set_Parameter ('kva', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_MaxTap(Value: Double);cdecl;
begin
  Set_Parameter ('MaxTap', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_MinTap(Value: Double);cdecl;
begin
  Set_Parameter ('MinTap', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_Name(const Value: PAnsiChar);cdecl;
var
  ActiveSave : Integer;
  S: String;
  Found :Boolean;
  elem: TTransfObj;
  lst: TPointerList;
Begin
  IF ActiveCircuit[ActiveActor] <> NIL THEN Begin
    lst := ActiveCircuit[ActiveActor].Transformers;
    S := Value;  // Convert to Pascal String
    Found := FALSE;
    ActiveSave := lst.ActiveIndex;
    elem := lst.First;
    While elem <> NIL Do Begin
      IF (CompareText(elem.Name, S) = 0) THEN Begin
        ActiveCircuit[ActiveActor].ActiveCktElement := elem;
        Found := TRUE;
        Break;
      End;
      elem := lst.Next;
    End;
    IF NOT Found THEN Begin
      DoSimpleMsg('Transformer "'+S+'" Not Found in Active Circuit.', 5003);
      elem := lst.Get(ActiveSave);    // Restore active Load
      ActiveCircuit[ActiveActor].ActiveCktElement := elem;
    End;
  End;
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_NumTaps(Value: Integer);cdecl;
begin
  Set_Parameter ('NumTaps', IntToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_NumWindings(Value: Integer);cdecl;
var
  elem: TTransfObj;
begin
  elem := ActiveTransformer;
  if elem <> nil then
    elem.SetNumWindings (Value);
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_R(Value: Double);cdecl;
begin
  Set_Parameter ('%R', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_Rneut(Value: Double);cdecl;
begin
  Set_Parameter ('Rneut', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_Tap(Value: Double);cdecl;
begin
  Set_Parameter ('Tap', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_Wdg(Value: Integer);cdecl;
var
  elem: TTransfObj;
begin
  elem := ActiveTransformer;
  if elem <> nil then
    if (value > 0) and (value <= elem.NumberOfWindings) then
      elem.ActiveWinding := Value;
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_XfmrCode(const Value: PAnsiChar);cdecl;
begin
  Set_Parameter ('XfmrCode', Value);
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_Xhl(Value: Double);cdecl;
begin
  Set_Parameter ('Xhl', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_Xht(Value: Double);cdecl;
begin
  Set_Parameter ('Xht', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_Xlt(Value: Double);cdecl;
begin
  Set_Parameter ('Xlt', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Transformers_Set_Xneut(Value: Double);cdecl;
begin
  Set_Parameter ('Xneut', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
function Transformers_Get_Count():Integer;cdecl;
begin
     If Assigned(ActiveCircuit[ActiveActor]) Then
          Result := ActiveCircuit[ActiveActor].Transformers.ListSize;
end;
//------------------------------------------------------------------------------
END.
